[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Src/Button Theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/font1.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/CircleBarFull.png" type="Texture" id=4]
[ext_resource path="res://Assets/CircleBarEmpty.png" type="Texture" id=5]
[ext_resource path="res://Assets/HeartIcon.png" type="Texture" id=6]
[ext_resource path="res://Assets/CorruptionIcon.png" type="Texture" id=7]
[ext_resource path="res://Src/BG.tres" type="StyleBox" id=8]
[ext_resource path="res://Src/Bar Theme.tres" type="Theme" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.713726, 0.0392157, 0.0392157, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.980392, 0, 0, 0 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="Theme" id=2]
ProgressBar/colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = ExtResource( 8 )
ProgressBar/styles/fg = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.0784314, 0.258824, 0.407843 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0.0745098, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.521569, 0.521569, 0.521569, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="Theme" id=5]
ProgressBar/colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 3 )
ProgressBar/styles/fg = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 9
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=7]
antialiased = false
font_path = "res://Assets/font1.ttf"

[sub_resource type="DynamicFont" id=8]
size = 22
outline_size = 1
outline_color = Color( 0.690196, 0.152941, 0.152941, 1 )
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 15
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HP" type="ProgressBar" parent="."]
margin_left = 20.0
margin_top = 3.0
margin_right = 68.0
margin_bottom = 13.0
theme = SubResource( 2 )
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPIcon" type="TextureRect" parent="."]
margin_left = 3.0
margin_top = 1.0
margin_right = 18.0
margin_bottom = 16.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Corruption" type="ProgressBar" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 68.0
margin_bottom = 30.0
theme = SubResource( 5 )
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorruptionIcon" type="TextureRect" parent="."]
margin_left = 3.0
margin_top = 17.0
margin_right = 18.0
margin_bottom = 32.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossName" type="RichTextLabel" parent="."]
visible = false
margin_left = 116.0
margin_top = 154.0
margin_right = 196.0
margin_bottom = 168.0
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.498039, 0.027451, 0.027451, 1 )
bbcode_enabled = true
bbcode_text = "[center]AZAZEL[/center]"
text = "AZAZEL"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossHealth" type="ProgressBar" parent="."]
visible = false
margin_left = 115.0
margin_top = 165.0
margin_right = 198.0
margin_bottom = 174.0
theme = ExtResource( 9 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinTime" type="TextureProgress" parent="."]
visible = false
margin_left = 266.0
margin_top = 127.0
margin_right = 316.0
margin_bottom = 177.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade1" type="TextureRect" parent="."]
margin_left = 71.0
margin_top = 2.0
margin_right = 83.0
margin_bottom = 14.0
rect_min_size = Vector2( 12, 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseLabel" type="Label" parent="."]
visible = false
margin_left = 64.0
margin_top = 55.0
margin_right = 249.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.964706, 0.329412, 0.329412, 1 )
text = "YOU DIED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseButton" type="Button" parent="."]
visible = false
margin_left = 126.0
margin_top = 112.0
margin_right = 186.0
margin_bottom = 132.0
theme = ExtResource( 2 )
text = "Replay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseButton2" type="Button" parent="."]
visible = false
margin_left = 127.0
margin_top = 140.0
margin_right = 186.0
margin_bottom = 160.0
theme = ExtResource( 2 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PossessedLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 66.0
margin_top = 130.0
margin_right = 237.0
margin_bottom = 175.0
custom_fonts/normal_font = SubResource( 9 )
custom_colors/default_color = Color( 0.521569, 0.521569, 0.521569, 1 )
bbcode_enabled = true
bbcode_text = "[tornado radius=3 freq=6][center]POSSESSED
[/center][/tornado]  "
text = "POSSESSED
  "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PossessedTime" type="TextureProgress" parent="."]
visible = false
margin_left = 205.0
margin_top = 126.0
margin_right = 255.0
margin_bottom = 176.0
max_value = 5.0
step = 0.1
value = 5.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="LoseButton" to="." method="_on_LoseButton_pressed"]
[connection signal="pressed" from="LoseButton2" to="." method="_on_LoseButton2_pressed"]
